--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "chart.js": "^4.4.3",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.13.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-big-calendar": "^1.8.9",
     "tailwindcss": "^3.4.4"
   }
 }
