--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.27.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
